--- a/package.json
+++ b/package.json
@@ -3,20 +3,39 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "preinstall": "typesync || :",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "lint:fix": "next lint --fix"
   },
   "dependencies": {
     "@types/node": "18.11.13",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
-    "eslint": "8.29.0",
+    "eslint": "^8.29.0",
     "eslint-config-next": "13.0.6",
     "next": "13.0.6",
+    "nextra": "^2.0.1",
+    "nextra-theme-blog": "^2.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.9.4"
+  },
+  "devDependencies": {
+    "@types/eslint": "8.4.10",
+    "@types/eslint-plugin-prettier": "^3.1.0",
+    "@types/prettier": "^2.7.1",
+    "@typescript-eslint/eslint-plugin": "^5.46.0",
+    "@typescript-eslint/parser": "^5.46.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.31.11",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "prettier": "^2.8.1",
+    "typescript-eslint": "^0.0.1-alpha.0",
+    "typesync": "^0.9.2"
   }
 }
