--- a/package.json
+++ b/package.json
@@ -11,16 +11,19 @@
     "lint:fix": "next lint --fix"
   },
   "dependencies": {
+    "@mdx-js/mdx": "^2.1.5",
+    "@mdx-js/react": "^2.1.5",
     "@types/node": "18.11.13",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
     "eslint": "^8.29.0",
     "eslint-config-next": "13.0.6",
+    "mdx-embed": "^1.1.2",
     "next": "13.0.6",
     "nextra": "^2.0.1",
     "nextra-theme-blog": "^2.0.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "typescript": "4.9.4"
   },
   "devDependencies": {
